2007-11-03 [paul]	3.0.2cvs112

	* AUTHORS
	* src/compose.c
	* src/gtk/authors.h
		allow Bcc in commandline URIs
		(based on) Patch by Federico Heinz <fheinz@vialibre.org.ar>

2007-11-02 [colin]	3.0.2cvs111

	* src/addressbook.c
		Maybe fix bug 1376, 'crash on 
		addressbook manipulation'

2007-10-31 [paul]	3.0.2cvs110

	* src/ldapupdate.c
		fix bug 1375, 'Impossible to modify e-mail
		in LDAP addressbook twice'
		Patch by Michael Rasmussen

2007-10-30 [paul]	3.0.2cvs109

	* configure.ac
		enable GnuTLS support with --enable-gnutls which
		will disable openssl support. if the user has
		gtk >= 2.10.x don't allow gnomeprint even if the
		user asks for it

2007-10-30 [paul]

	3.1.0-rc1 released

2007-10-30 [paul]	3.0.2cvs108

	* Makefile.am
		add ChangeLog.2.0.0-3.0.0 to EXTRA_DIST

2007-10-30 [paul]	3.0.2cvs107

	* src/expldifdlg.c
	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/prefs_themes.c
	* src/wizard.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
	* src/plugins/spamassassin/spamassassin_gtk.c
		replace deprecated gtk_option_menu...
		patch by Pawel Pekala

2007-10-29 [colin]	3.0.2cvs106

	* src/plugins/dillo_viewer/dillo_prefs.c
		Fix forgotten signal connect

2007-10-28 [colin]	3.0.2cvs105

	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/dillo_viewer/dillo_prefs.h
	* src/plugins/dillo_viewer/dillo_viewer.c
		Implement addressbook-based whitelisting for loading
		remote images. Fixed missing destroy of the embedded
		browser that made a Dillo window pop up on exit, if
		an HTML part was displayed.

2007-10-26 [colin]	3.0.2cvs104

	* src/edittags.c
		Add missing static

2007-10-25 [colin]	3.0.2cvs103

	* src/editaddress.c
		Add tap-and-hold on the picture, for Maemo
	* src/edittags.c
	* src/edittags.h
	* src/mainwindow.c
	* src/procmsg.c
	* src/summaryview.c
	* src/textview.c
		Unify tag interfaces.

2007-10-25 [colin]	3.0.2cvs102

	* src/imap.c
	* src/etpan/imap-thread.h