@@ -3025,3 +3025,4 @@
 ( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/ldapupdate.c;  ) > 3.0.2cvs110.patchset
 ( cvs diff -u -r 1.60.2.103 -r 1.60.2.104 src/addressbook.c;  ) > 3.0.2cvs111.patchset
 ( cvs diff -u -r 1.100.2.56 -r 1.100.2.57 AUTHORS;  cvs diff -u -r 1.382.2.418 -r 1.382.2.419 src/compose.c;  cvs diff -u -r 1.1.2.42 -r 1.1.2.43 src/gtk/authors.h;  ) > 3.0.2cvs112.patchset
+( cvs diff -u -r 1.36.2.121 -r 1.36.2.122 src/common/utils.c;  ) > 3.0.2cvs113.patchset
